--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "start": "webpack-dev-server --open --mode development",
     "start-prod": "node app.js",
     "test": "jest",
-    "eslint": "eslint './**/*.{js,jsx}'",
+    "cypress:open": "cypress open",
+    "test:e2e": "cypress run",
+    "eslint": "eslint ./src/*.{js,jsx}",
     "build": "webpack --mode production"
   },
   "repository": {
@@ -33,6 +35,7 @@
     "babel-jest": "^25.5.1",
     "babel-loader": "^8.1.0",
     "css-loader": "^3.5.3",
+    "cypress": "^7.6.0",
     "eslint": "^6.8.0",
     "eslint-plugin-jest": "^23.11.0",
     "eslint-plugin-react": "^7.19.0",
