--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "start": "webpack-dev-server --open --mode development",
     "start-prod": "node app.js",
+    "postinstall": "npm run build",
     "test": "jest",
     "cypress:open": "cypress open",
     "test:e2e": "cypress run",
