--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,3 +15,4 @@ jobs:
           heroku_api_key: ${{secrets.HEROKU_API_KEY}}
           heroku_app_name: "keith-pokedex" #Must be unique in Heroku
           heroku_email: "keithlow98@gmail.com"
+          procfile: "web: npm start-prod"
