--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,6 +15,6 @@ jobs:
           heroku_api_key: ${{secrets.HEROKU_API_KEY}}
           heroku_app_name: "keith-pokedex" #Must be unique in Heroku
           heroku_email: "keithlow98@gmail.com"
-          procfile: "web: npm run start-prod"
+          procfile: "web: npm start"
           healthcheck: "https://keith-pokedex.herokuapp.com/health"
           rollbackonhealthcheckfailed: true
