--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,6 +4,10 @@ on:
   push:
     branches:
       - master
+  pull_request:
+  branches: [main]
+  types: [opened, synchronize]
+    
 
 jobs:
   build:
