--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -33,7 +33,7 @@ jobs:
           wait-on: http://localhost:5000
 
       - name: pushing code to heroku
-      - uses: akhileshns/heroku-deploy@v3.12.12 # This is the action
+        uses: akhileshns/heroku-deploy@v3.12.12 # This is the action
         if: ${{ github.event_name == 'push' && !contains(join(github.event.commits.*.message, ' '), '#skip') }}
         with:
           heroku_api_key: ${{secrets.HEROKU_API_KEY}}
@@ -42,7 +42,7 @@ jobs:
           procfile: "web: npm run start-prod"
           healthcheck: "https://keith-pokedex.herokuapp.com/health"
           rollbackonhealthcheckfailed: true
-          
+
       - uses: actions/checkout@v2
 
       - name: Bump version and push tag
