--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -55,11 +55,11 @@ jobs:
       - name: send success notification to slack
         uses: 8398a7/action-slack@v3.9.1
         with:
-          status: custom
+          status: ${{ job.status }}
           fields: commit, author, took
           env: 
             SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
-          if: ${{ github.event_name == 'push' && !contains(join(github.event.commits.*.message, ' '), '#skip') && success() }}
+          if: always()  
 
       # - name: send failure notification to slack
       #   uses: 8398a7/action-slack@v3.9.1
