--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -53,6 +53,7 @@ jobs:
           DEFAULT_BUMP: patch
 
       - uses: 8398a7/action-slack@v3.9.1
+      # - name: send success notification to slack
         with:
           status: ${{ job.status }}
           fields: commit, author, took
@@ -60,7 +61,8 @@ jobs:
           SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
         if: ${{ github.event_name == 'push' && !contains(join(github.event.commits.*.message, ' '), '#skip') && success() }}  
 
-      - uses: 839a7/action-slack@v3.9.1
+      - uses: 8398a7/action-slack@v3.9.1
+      # - name: send failure notification to slack
         with: 
           status: ${{ job.status }}
           fields: all
